--- a/Create Solution/index.html
+++ b/Create Solution/index.html
@@ -181,7 +181,7 @@
                      <p class="fine">
                         I was impressed with how the agency understood
                         the unique challenges of our small business. 
-                        They offered strategic planning and hands-on 
+                        They offered strategic planning and
                         support that were pivotal in launching our digital campaigns.
                     </p>
                      <p>⭐⭐⭐⭐⭐</p>
@@ -192,7 +192,7 @@
                 <p class="fine">
                    The team's dedication to our goals was evident from the start.
                     With their comprehensive digital marketing strategies,
-                    we experienced improved campaign performance and measurable growth.
+                    we experienced improved campaign performance.
                 </p>
                 <p>⭐⭐⭐⭐⭐</p>
             </div>
