--- a/Create Solution/index.html
+++ b/Create Solution/index.html
@@ -203,9 +203,11 @@
             </div>
         </div>
     </section>
-    <section class="cta">
+    <section class="dta">
+        <div class="cta">
         <p>Ready to get started?</p>
         <button class="contact-btn">Contact Us</button>
+        </div>
     </section>
     <footer>
         <div class="opony">
