--- a/Create Solution/index.html
+++ b/Create Solution/index.html
@@ -187,7 +187,7 @@
                      <p>⭐⭐⭐⭐⭐</p>
                 </div>
                     <div class="rating-content">
-                      <div class="img"> <img src="/image/cliet 3.jpg" alt="Client Avatar">
+                      <div class="img"> <img src="/image/sylvia.jpg" alt="Client Avatar">
                         <p> <span class="span">Sylvia Queenie Dodoye</span>, <br>Marketing Director at GlobalConnect</p></div> 
                 <p class="fine">
                    The team's dedication to our goals was evident from the start.
